--- a/pom.xml
+++ b/pom.xml
@@ -79,5 +79,11 @@
 		<artifactId>jetty-util</artifactId>
 		<version>9.0.0.v20130308</version>
 	</dependency>
+	<dependency>
+	    <groupId>com.google.guava</groupId>
+	    <artifactId>guava</artifactId>
+	    <version>20.0</version>
+	</dependency>
+	
   </dependencies>
 </project>
