--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>uk.ac.imperial.lsds.saber</groupId>
-  <artifactId>saber</artifactId>
+  <artifactId>yahoo_benchmark_saber</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>saber</name>
+  <name>yahoo_benchmark_saber</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -49,11 +49,6 @@
     	<version>5.2.0</version>
 	</dependency>
 	<dependency>
-		<groupId>commons-logging</groupId>
-		<artifactId>commons-logging</artifactId>
-		<version>1.2</version>
-	</dependency>
-	<dependency>
 		<groupId>javax.servlet</groupId>
 		<artifactId>javax.servlet-api</artifactId>
 		<version>3.1.0</version>
@@ -80,10 +75,19 @@
 		<version>9.0.0.v20130308</version>
 	</dependency>
 	<dependency>
+		<groupId>org.apache.logging.log4j</groupId>
+		<artifactId>log4j-api</artifactId>
+		<version>2.5</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.logging.log4j</groupId>
+		<artifactId>log4j-core</artifactId>
+		<version>2.5</version>
+	</dependency>
+	<dependency>
 	    <groupId>com.google.guava</groupId>
 	    <artifactId>guava</artifactId>
 	    <version>20.0</version>
 	</dependency>
-	
-  </dependencies>
+  </dependencies>  
 </project>
